--- a/index.html
+++ b/index.html
@@ -275,6 +275,7 @@
             <div class="hexagon"></div>
         </div>
     </div>
+    <div class="navigator"></div>
     <H1>Crisandro Basoy</H1>
     <div class="contents" >
         <img src="Img/animation.jpg" class="myPicture"/>
