--- a/index.html
+++ b/index.html
@@ -275,12 +275,52 @@
             <div class="hexagon"></div>
         </div>
     </div>
-    <div class="navigator"></div>
-    <H1>Crisandro Basoy</H1>
+    <div class="navigator">
+        <H1 class="pageTitle">Crisandro Basoy</H1>
+    </div>
+    <div id="shadowbox">
+        <div id="monstercard" class="card" data-name="maincard">
+            <div class="front" onclick="cardOut('maincard')">
+                <h1 id="cardTitle">Crisandro Basoy</h1>
+                <img id="starLevel" src="Img/star.png"/>
+                <img id="starLevel2" src="Img/star.png"/>
+                <img id="starLevel3" src="Img/star.png"/>
+                <img id="starLevel4" src="Img/star.png"/>
+                <img id="starLevel5" src="Img/star.png"/>
+                <img id="starLevel6" src="Img/star.png"/>
+                <img id="starLevel7" src="Img/star.png"/>
+                <img id="starLevel8" src="Img/star.png"/>
+                <img id="starLevel9" src="Img/star.png"/>
+                <img id="starLevel10" src="Img/star.png"/>
+                <img id="starLevel11" src="Img/star.png"/>
+                <img id="starLevel12" src="Img/star.png"/>
+                <div class="mypic"><img src="Img/animation.jpg"/></div>
+                <img id="cardType" src="Img/wind.png">
+                <h4 id="monsterType">[Developer][Moderator]</h4>
+                <p id="monsterDescription">A guy who loves playing around with javascripts and CSS. He also use Illustrator to create vector logos or Photoshop to Edit and manipulate photos for certain projects or for fun. Enjoy browsing some of his works here.</p>
+                <p id="monsterAtk">?</p>
+                <p id="monsterDef">?</p>
+            </div>
+            <img id="back" onclick="cardIn('maincard')" src="Img/SlifertheSkyDragon-GBI-AE-Back.webp"/>
+        </div>
+        <div id="magiccard" class="card" data-name="coffeecard">
+            <div class="magicfront" onclick="cardOut('coffeecard')">
+                
+                <h1 id="card1Title">Coffee</h1>
+                <div class="magicpic"><img src="Img/coffee.png"/></div>
+                <p id="magicDescription">
+                    Use this card to increase alertness and energy also gives ability to concentrate.
+                </p>
+            </div>
+            <img id="magicback" onclick="cardIn('coffeecard')" src="Img/SlifertheSkyDragon-GBI-AE-Back.webp"/>
+        </div>
+    </div>
+    <img src="Img/animation.jpg" class="myPicture"/>
     <div class="contents" >
-        <img src="Img/animation.jpg" class="myPicture"/>
+        
 
     </div>    
+    <script src="vanilla-tilt.js"></script>
     <script src="config.js" type="text/javascript"></script>
     <script src="script.js" type="text/javascript"></script>
 </body>
